credited original author

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- Original Author: bedimcode -->
+<!-- Link: https://www.youtube.com/watch?v=27JtRAI3QO8 -->
+
 <!DOCTYPE html>
     <html lang="en">
         <head>
@@ -405,7 +408,7 @@
            </section>
 
            <!------------------- Project In Mind ------------------->
-
+           section.
 
            <!------------------- Contact Me ------------------->
 
