updated index.html, styles.css and main.js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="nav_menu" id="nav-menu">
                     <ul class="nav_list grid">
                         <li class="nav_item">
-                            <a href="#home" class="nav_link">
+                            <a href="#home" class="nav_link active-link">
                                 <i class="uil uil-estate nav_icon"></i> Home
                             </a>
                         </li>
@@ -61,6 +61,9 @@
                 </div>
 
                 <div class="nav_btns">
+                    <!-- Theme change button -->
+                    <i class="uil uil-moon change-theme" id="theme-button"></i>
+
                     <div class="nav_toggle" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
@@ -405,20 +408,103 @@
                     <!-- Portfolio pagination -->
                     <div class="swiper-pagination"></div>
                 </div>
-           </section>
-
-           <!------------------- Project In Mind ------------------->
-           section.
+           </section>           
 
            <!------------------- Contact Me ------------------->
+           <section class="contact section" id="contact">
+                <h2 class="section_title">Contact Me</h2>
+                <span class="section_subtitle">Get in touch</span>
 
+                <div class="contact_container container grid">
+                    <div>
+                        <div class="contact_info">
+                            <i class="uil uil-phone contact_icon"></i>
+
+                            <div>
+                                <h3 class="contact_title">Call Me</h3>
+                                <span class="contact_subtitle">980 333-2042</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="contact_info">
+                        <i class="uil uil-envelope contact_icon"></i>
+
+                        <div>
+                            <h3 class="contact_title">Email</h3>
+                            <span class="contact_subtitle">kvu9@charlotte.edu</span>
+                        </div>
+                    </div>
+
+                    <div class="contact_info">
+                        <i class="uil uil-map-marker contact_icon"></i>
+
+                        <div>
+                            <h3 class="contact_title">Location</h3>
+                            <span class="contact_subtitle">Charlotte, North Carolina</span>
+                        </div>
+                    </div>
+
+                    <form action="" class="contact_form grid">
+                        <div class="contact_inputs grid">
+                            <div class="contact_content">
+                                <label for="" class="contact_label">Name</label>
+                                <input type="text" class="contact_input">
+                            </div>
+                            <div class="contact_content">
+                                <label for="" class="contact_label">Email</label>
+                                <input type="email" class="contact_input">
+                            </div>
+                        </div>
+                        <div class="contact_content">
+                            <label for="" class="contact_label">Message</label>
+                            <textarea name="" id="" cols="0" rows="7" class="contact_input"></textarea>
+                        </div>
+
+                        <div>
+                            <a href="#" class="button button-flex">
+                                Send Message<i class="uil uil-message button_icon"></i>
+                            </a>
+                        </div>
+                    </form>
+                </div>
+           </section>
        </main>
        
         <!------------------- FOOTER ------------------->   
+       <footer class="footer">
+        <div class="footer_bg">
+            <div class="footer_container container grid">
+                <div>
+                    <h1 class="footer_title">Khang</h1>
+                    <span class="footer_subtitle">Full Stack developer</span>
+                </div>
 
+                <ul class="footer_links">
+                    <li>
+                        <a href="#portfolio" class="footer_link">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#contact" class="footer_link">Contact Me</a>
+                    </li>
+                </ul>
+
+                <div class="footer_socials">
+                    <a href="https://www.facebook.com/khang.vu.7545" target="_blank" class="footer_social">
+                        <i class="uil uil-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/khangvu_/" target="_blank" class="footer_social">
+                        <i class="uil uil-instagram"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+       </footer>
 
         <!------------------- SCROLL TOP ------------------->  
-
+       <a href="#" class="scrollup" id="scroll-up">
+            <i class="uil uil-arrow-up scrollup_icon"></i>
+       </a>
 
        <!------------------- SWIPER JS ------------------->  
        <script src="assets/js/swiper-bundle.min.js"></script>
