added readme file and updated index.html & styles.css

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                <div class="skills_data">
                                    <div class="skills_title">
                                        <h3 class="skills_name">C++</h3>
-                                       <span class="skills_number">80%</span>
+                                       <span class="skills_number">75%</span>
                                    </div>
                                    <div class="skills_bar">
                                        <span class="skills_percentage skills_c"></span>
@@ -250,7 +250,7 @@
                                <div class="skills_data">
                                    <div class="skills_title">
                                        <h3 class="skills_name">Node JS</h3>
-                                       <span class="skills_number">15%</span>
+                                       <span class="skills_number">20%</span>
                                    </div>
                                    <div class="skills_bar">
                                        <span class="skills_percentage skills_node"></span>
@@ -425,7 +425,7 @@
             <div class="footer_container container grid">
                 <div>
                     <h1 class="footer_title">Khang</h1>
-                    <span class="footer_subtitle">Full Stack developer</span>
+                    <span class="footer_subtitle">Aspiring Software Engineer</span>
                 </div>
 
                 <ul class="footer_links">
