Changed photo in About Me section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                <span class="section_subtitle">My introduction</span>
 
                <div class="about_container container grid">
-                   <img src="assets/img/khang2.jpg" alt="" class="about_img">
+                   <img src="assets/img/headshot.jpg" alt="" class="about_img">
 
                    <div class="about_data">
                        <p class="about_description">Aspiring software engineer, with extensive knowledge and a strong foundation.
